Добавлена смена статуса сообщений в WebSocket